--- a/src/App.css
+++ b/src/App.css
@@ -21,3 +21,19 @@
 .App-link {
   color: #61dafb;
 }
+
+.letterBox_animation {
+  animation: letterAppear 200ms;
+}
+
+@keyframes letterAppear {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.1);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
